# swan

./: .gitignore  .gitmodules  .out.txt.swp  CMakeLists.txt  FILE_HEADER  LICENSE.txt  LICENSE_HEADER  NOTICE.txt  README.md  build.gradle  build.sh  gradle.properties.example  out.txt  readme.md  settings.gradle  tags
.github/workflows/: gradle.yml  macOS.yml  ubuntu.yml
SwanViewer/: README.md
SwanViewer/SwanViewer/: AppDelegate.swift
ca.maple.swan.analysis/: build.gradle
ca.maple.swan.client/: build.gradle
ca.maple.swan.ir/: build.gradle
ca.maple.swan.swift/: build.gradle
ca.maple.swan.swift.server/: build.gradle
ca.maple.swan.swift.test/: build.gradle  test.swift
ca.maple.swan.swift.test/counter/: counts.txt  instruction_counter.py
ca.maple.swan.swift.test/testFiles/: test2-floatLiterals.swift  test22-varStringLiteral.swift  test28-constStringLiteral.swift  test33-stringClasses.swift  test34-stringFunctions.swift
ca.maple.swan.translator/: .gitignore  CMakeLists.txt  argumentWriter.py  build.gradle  shim.py
ca.maple.swan.translator/cmake/modules/: SwiftWalaUtils.cmake
ca.maple.swan.translator/include/: BasicBlockLabeller.h  BuiltinFunctions.hpp  InfoStructures.hpp  InstructionVisitor.h  OLD_SILWalaInstructionVisitor.h  SILWalaInstructionVisitor.h  SwiftCHook.h  SwiftCHook.hpp  SwiftToCAstTranslatorJNIWrapper.h  SymbolTable.h  WALAInstance.h
ca.maple.swan.translator/lib/: BasicBlockLabeller.cpp  CMakeLists.txt  InstructionVisitor.cpp  OLD_SILWalaInstructionVisitor.cpp  SILWalaInstructionVisitor.cpp  SwiftToCAstTranslatorJNIWrapper.cpp  SymbolTable.cpp  WALAInstance.cpp
ca.maple.swan.utils/: build.gradle
ca.ualberta.maple.swan.client/: build.gradle
ca.ualberta.maple.swan.ir/: build.gradle
ca.ualberta.maple.swan.parser/: build.gradle  out.sil
ca.ualberta.maple.swan.spds/: build.gradle
ca.ualberta.maple.swan.utils/: build.gradle
ca.ualberta.maple.swan.viewer/: build.gradle
com.ibm.wala.cast.swift/: .classpath  .gitignore  .project  build.gradle  build.properties  build.xml  gradle.properties.example  javaCompiler...args  settings.gradle
com.ibm.wala.cast.swift/example_swift_code/: test1.swift
com.ibm.wala.cast.swift/swift-wala-translator/: CMakeLists.txt  build.gradle
com.ibm.wala.cast.swift/swift-wala-translator/lib/WALASupport/: BasicBlockLabeller.cpp  CMakeLists.txt  SILWalaInstructionVisitor.cpp  SymbolTable.cpp  WALAInstance.cpp
com.ibm.wala.cast.swift/testFiles/: test10-stringLiterals.swift  test13-floatingLiterals.swift  test17-floatingLiterals.swift  test18-comments.swift  test19-longcomments.swift  test20-varsWithLiterals.swift  test23-varStringLiteral.swift  test24-constStringLiteral.swift  test25-constStringLiteral.swift  test26-constStringLiteral.swift  test29-constStringLiteral.swift  test30-stringLiteralIntropolation.swift  test31-stringClasses.swift  test32-stringClasses.swift  test4-stringLiterals.swift  test7-floatLiterals.swift  test8-stringLiterals.swift  test9-stringLiterals.swift
dev/SwanViewer/: README.md
doc/: LICENSE.md
jvm/: build.gradle  build.sh  gradle.properties  gradle.properties.sample  settings.gradle
jvm/ca.ualberta.maple.swan.client/: build.gradle
jvm/ca.ualberta.maple.swan.drivers/: build.gradle
jvm/ca.ualberta.maple.swan.ir/: build.gradle
jvm/ca.ualberta.maple.swan.parser/: build.gradle
jvm/ca.ualberta.maple.swan.spds/: build.gradle
jvm/ca.ualberta.maple.swan.test/: build.gradle
jvm/ca.ualberta.maple.swan.testclient/: build.gradle
jvm/ca.ualberta.maple.swan.utils/: build.gradle
jvm/ca.ualberta.maple.swan.viewer/: build.gradle
jvm/resources/: README.txt
lib/: NOTE.txt
specifications/examples/: taint-args.json  taint.json  typestate-json-only.json  typestate-json-with-programmatic.json
specifications/location-api/: README.md
specifications/sqlite-api/: Insert.json  Read.json  Update.json
swan-xcodebuild/: Package.swift
swan-xcodebuild/Tests/: LinuxMain.swift
swan-xcodebuild/swan-sil/: out.sil
swan-xcodebuild/swan-xcodebuild.xcodeproj/: project.pbxproj
swift/: Package.resolved  Package.swift  build.sh
swift/swan-swiftc/: Package.resolved  Package.swift  build.sh
swift/swan-xcodebuild/: Package.swift  build.sh
testFiles/: test12-floatingLiterals.swift  test14-floatingLiterals.swift
tests/: README.md  basic-spec.json  helper.bash  skip.txt  swan-spm.py  test.bash  tester.bash
tests/crypto-swift/: test.bash
tests/examples/: test.bash
tests/interprocedural/: test.bash
tests/security/: test.bash
tests/sil-packages/: ColorizeSwift.sil
tests/simple-taint-examples/: test.bash
tests/ssl/: test.bash
tests/testing-schemes/: test.bash
tests/typestate/: test.bash
utils/: README.md  build-packages  build-swan  constants.py  failing-tests  run-single-test  run-swan-single  run-swan-single-annotation  run-tests  swan-swiftc  swan-xcodebuild  update-packages
utils/dev/: run-swan-single  run-swan-single-annotation  run-tests
utils/release/: run-swan-single
(+902 files in other folders)
